--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -170,9 +170,9 @@ jobs:
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
           echo "push version ${{steps.getPomVersion.outputs.info}}"
           if [[ $BRANCH_NAME == master ]]; then
-            VERSION=latest
+            VERSION=1.2.0.1
           else
-            VERSION=$BRANCH_NAME
+            VERSION=1.2.0.1
           fi
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
@@ -224,12 +224,5 @@ jobs:
           mvn -B -Dgpg.skip verify sonar:sonar -Dsonar.projectKey=mosip_${{ github.event.repository.name }} -Dsonar.organization=${{ secrets.ORG_KEY }} -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }} -s $GITHUB_WORKSPACE/settings.xml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          
-#       - uses: 8398a7/action-slack@v3
-#         with:
-#           status: ${{ job.status }}
-#           fields: repo,message,commit,workflow,job # selectable (default: repo,message)
-#         env:
-#           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_DEVOPS_WEBHOOK }} # required
-#         if: failure() # Pick up events even if the job fails or is canceled.
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}        
+
