--- a/src/main/resources/application-local1.properties
+++ b/src/main/resources/application-local1.properties
@@ -1,4 +1,14 @@
-mosip.event.hubURL=https://dev2.mosip.net/hub/
+idpass.lite.qrcode.detailsvisible=DETAIL_SURNAME, DETAIL_GIVENNAME, DETAIL_PLACEOFBIRTH
+idpass.lite.expireYears=10
+idpass.lite.editorUrl=https://editor.idpass.org/api/v1/cards/627f61f5-7da2-419c-abf7-d79509c97327/render/
+idpass.lite.p12File=demokeys.cfg.p12
+idpass.lite.storePrefix=default
+idpass.lite.storePassword=changeit
+idpass.lite.keyPassword=changeit
+idpass.lite.cardDir=/home/guest/cards/
+idpass.lite.datePattern=yyyy/MM/d
+
+mosip.event.hubURL=https://rc2.technoforte.co.in/hub/
 mosip.partner.id=mpartner-default-print
 mosip.datashare.partner.id=mpartner-default-resident
 mosip.datashare.policy.id=mpolicy-default-resident
@@ -28,11 +38,11 @@ token.request.secretKey=abc123
 token.request.issuerUrl=http://keycloak/auth/realms/mosip
 
 #Audit Service
-AUDIT=https://dev2.mosip.net/v1/auditmanager/audits
+AUDIT=https://rc2.technoforte.co.in/v1/auditmanager/audits
 mosip.kernel.pdf_owner_password=123456
 
 #Master Data Services
-MASTER=https://dev2.mosip.net/v1/masterdata
+MASTER=https://rc2.technoforte.co.in/v1/masterdata
 TEMPLATES=${MASTER}/templates
 
 #Packet receiver application version
@@ -62,11 +72,11 @@ mosip.supported-languages=eng,ara,fra
 
 mosip.primary-language=eng
 mosip.secondary-language=ara
-PDFSIGN=https://dev2.mosip.net/v1/keymanager/pdf/sign
+PDFSIGN=https://rc2.technoforte.co.in/v1/keymanager/pdf/sign
 
 #----------------------- CBEFF Util--------------------------------------------------
 # Cbeff URL where the files will be stored in git, change it accordingly in case of change of storage location.
-mosip.kernel.xsdstorage-uri=https://dev2.mosip.net/config/print/mz/develop2-v2/
+mosip.kernel.xsdstorage-uri=https://rc2.technoforte.co.in/config/print/default/qa-release/
 # Cbeff XSD file name in config server
 mosip.kernel.xsdfile=mosip-cbeff.xsd
 
@@ -79,8 +89,8 @@ mosip.kernel.pin.length=6
 #-----------------------------TOKEN-ID Properties---------------------------------
 #length of the token id
 mosip.kernel.tokenid.length=36
-AUDIT_URL=https://dev2.mosip.net/v1/auditmanager/audits
-KEYBASEDTOKENAPI=https://dev2.mosip.net/v1/authmanager/authenticate/clientidsecretkey
+AUDIT_URL=https://rc2.technoforte.co.in/v1/auditmanager/audits
+KEYBASEDTOKENAPI=https://rc2.technoforte.co.in/v1/authmanager/authenticate/clientidsecretkey
 
 
 
@@ -98,10 +108,10 @@ server.tomcat.accesslog.file-date-format=
 server.tomcat.accesslog.pattern={"@timestamp":"%{yyyy-MM-dd'T'HH:mm:ss.SSS'Z'}t","level":"ACCESS","level_value":70000,"traceId":"%{X-B3-TraceId}i","statusCode":%s,"req.requestURI":"%U","bytesSent":%b,"timeTaken":%T,"appName":"print"}
 server.tomcat.accesslog.className=io.mosip.kernel.core.logger.config.SleuthValve
 registration.processor.unMaskedUin.length=5
-CREATEDATASHARE=https://dev2.mosip.net/v1/datashare/create
+CREATEDATASHARE=https://rc2.technoforte.co.in/v1/datashare/create
 
 #mosip.print.uin.header.length=10
-config.server.file.storage.uri=https://dev2.mosip.net/config/print/mz/develop2-v2/
+config.server.file.storage.uri=https://rc2.technoforte.co.in/config/print/default/qa-release/
 IDSchema.Version=1.0
 registration.processor.identityjson=identity-mapping.json
 registration.processor.demographic.identity=identity
@@ -110,8 +120,8 @@ mosip.iam.adapter.clientid=mpartner-default-print
 mosip.iam.adapter.clientsecret=abc123
 mosip.iam.adapter.appid=admin
 
-mosip.iam.adapter.issuerURL=https://dev2.mosip.net/keycloak/auth/realms/mosip
-mosip.authmanager.base-url=https://dev2.mosip.net/v1/authmanager
+mosip.iam.adapter.issuerURL=https://rc2.technoforte.co.in/keycloak/auth/realms/mosip
+mosip.authmanager.base-url=https://rc2.technoforte.co.in/v1/authmanager
 mosip.authmanager.client-token-endpoint=${mosip.authmanager.base-url}/authenticate/clientidsecretkey
 # in minutes
 
@@ -123,7 +133,7 @@ mosip.iam.adapter.renewal-before-expiry-interval=1440
 #this should be false if you don?t use this restTemplate true if you do
 
 mosip.template-language=eng
-auth.server.admin.issuer.uri=https://dev2.mosip.net/keycloak/auth/realms/
+auth.server.admin.issuer.uri=https://rc2.technoforte.co.in/keycloak/auth/realms/
 mosip.iam.adapter.self-token-renewal-enable=true
 mosip.auth.filter_disable=false
 mosip.print.crypto.p12.filename=partner.p12
