--- a/print/src/main/resources/application-local1.properties
+++ b/print/src/main/resources/application-local1.properties
@@ -1,6 +1,8 @@
-idpass.lite.qrcode.detailsvisible=DETAIL_SURNAME, DETAIL_GIVENNAME, DETAIL_PLACEOFBIRTH
+idpass.lite.qrcode.detailsvisible=DETAIL_FULLNAME,DETAIL_DATEOFBIRTH
 idpass.lite.expireYears=10
-idpass.lite.editorUrl=https://editor.idpass.org/api/v1/cards/627f61f5-7da2-419c-abf7-d79509c97327/render/
+idpass.lite.editorUrl=http://localhost:8000/api/v1/cards/6f5743ed-74bc-486a-a1e1-6082873fb10d/render/
+idpass.lite.token.username=technoforte
+idpass.lite.token.password=techno@123
 idpass.lite.p12File=demokeys.cfg.p12
 idpass.lite.storePrefix=default
 idpass.lite.storePassword=changeit
