--- a/print/pom.xml
+++ b/print/pom.xml
@@ -251,6 +251,11 @@
 			<artifactId>idpass-lite-java</artifactId>
 			<version>0.1</version>
 		</dependency>
+		 <!-- <dependency>
+            <groupId>org.idpass</groupId>
+            <artifactId>idpass-lite-java</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency> -->
 		<dependency>
 			<groupId>com.google.protobuf</groupId>
 			<artifactId>protobuf-java</artifactId>
