Updated docker file

--- a/print/src/main/resources/application-local1.properties
+++ b/print/src/main/resources/application-local1.properties
@@ -1,16 +1,16 @@
 idpass.lite.qrcode.detailsvisible=DETAIL_FULLNAME,DETAIL_DATEOFBIRTH
 idpass.lite.expireYears=10
-idpass.lite.editorUrl=http://localhost:8000/api/v1/cards/6f5743ed-74bc-486a-a1e1-6082873fb10d/render/
-idpass.lite.token.username=technoforte
-idpass.lite.token.password=techno@123
-idpass.lite.p12File=demokeys.cfg.p12
-idpass.lite.storePrefix=default
-idpass.lite.storePassword=changeit
-idpass.lite.keyPassword=changeit
+idpass.lite.editorUrl=https://idpass.technoforte.co.in/api/v1/cards/895048aa-ff6a-4346-bf48-b8f706a63815/render/
+idpass.lite.token.username=tfadmin
+idpass.lite.token.password=Techno@123
+idpass.lite.p12File=partner.p12
+idpass.lite.storePrefix=partner
+idpass.lite.storePassword=password@123
+idpass.lite.keyPassword=password@123
 idpass.lite.cardDir=/home/guest/cards/
 idpass.lite.datePattern=yyyy/MM/d
 
-mosip.event.hubURL=https://rc2.technoforte.co.in/hub/
+mosip.event.hubURL=https://api-internal.demo05.idencode.link/hub/
 mosip.partner.id=mpartner-default-print
 mosip.datashare.partner.id=mpartner-default-resident
 mosip.datashare.policy.id=mpolicy-default-resident
@@ -40,11 +40,11 @@ token.request.secretKey=abc123
 token.request.issuerUrl=http://keycloak/auth/realms/mosip
 
 #Audit Service
-AUDIT=https://rc2.technoforte.co.in/v1/auditmanager/audits
+AUDIT=https://api-internal.demo05.idencode.link/v1/auditmanager/audits
 mosip.kernel.pdf_owner_password=123456
 
 #Master Data Services
-MASTER=https://rc2.technoforte.co.in/v1/masterdata
+MASTER=https://api-internal.demo05.idencode.link/v1/masterdata
 TEMPLATES=${MASTER}/templates
 
 #Packet receiver application version
@@ -74,7 +74,7 @@ mosip.supported-languages=eng,ara,fra
 
 mosip.primary-language=eng
 mosip.secondary-language=ara
-PDFSIGN=https://rc2.technoforte.co.in/v1/keymanager/pdf/sign
+PDFSIGN=https://api-internal.demo05.idencode.link/v1/keymanager/pdf/sign
 
 #----------------------- CBEFF Util--------------------------------------------------
 # Cbeff URL where the files will be stored in git, change it accordingly in case of change of storage location.
@@ -91,8 +91,8 @@ mosip.kernel.pin.length=6
 #-----------------------------TOKEN-ID Properties---------------------------------
 #length of the token id
 mosip.kernel.tokenid.length=36
-AUDIT_URL=https://rc2.technoforte.co.in/v1/auditmanager/audits
-KEYBASEDTOKENAPI=https://rc2.technoforte.co.in/v1/authmanager/authenticate/clientidsecretkey
+AUDIT_URL=https://api-internal.demo05.idencode.link/v1/auditmanager/audits
+KEYBASEDTOKENAPI=https://api-internal.demo05.idencode.link/v1/authmanager/authenticate/clientidsecretkey
 
 
 
@@ -110,20 +110,21 @@ server.tomcat.accesslog.file-date-format=
 server.tomcat.accesslog.pattern={"@timestamp":"%{yyyy-MM-dd'T'HH:mm:ss.SSS'Z'}t","level":"ACCESS","level_value":70000,"traceId":"%{X-B3-TraceId}i","statusCode":%s,"req.requestURI":"%U","bytesSent":%b,"timeTaken":%T,"appName":"print"}
 server.tomcat.accesslog.className=io.mosip.kernel.core.logger.config.SleuthValve
 registration.processor.unMaskedUin.length=5
-CREATEDATASHARE=https://rc2.technoforte.co.in/v1/datashare/create
+CREATEDATASHARE=https://api-internal.demo05.idencode.link/v1/datashare/create
 
 #mosip.print.uin.header.length=10
 config.server.file.storage.uri=https://rc2.technoforte.co.in/config/print/default/qa-release/
+#http://config-server.config-server/config/print/default/demo05-1.2.0.1-B2/
 IDSchema.Version=1.0
 registration.processor.identityjson=identity-mapping.json
 registration.processor.demographic.identity=identity
 
 mosip.iam.adapter.clientid=mpartner-default-print
-mosip.iam.adapter.clientsecret=abc123
+mosip.iam.adapter.clientsecret=6nAJQI6hNIPdH3pX
 mosip.iam.adapter.appid=admin
 
-mosip.iam.adapter.issuerURL=https://rc2.technoforte.co.in/keycloak/auth/realms/mosip
-mosip.authmanager.base-url=https://rc2.technoforte.co.in/v1/authmanager
+mosip.iam.adapter.issuerURL=https://iam.demo05.idencode.link/auth/realms/mosip
+mosip.authmanager.base-url=https://api-internal.demo05.idencode.link/v1/authmanager
 mosip.authmanager.client-token-endpoint=${mosip.authmanager.base-url}/authenticate/clientidsecretkey
 # in minutes
 
@@ -135,7 +136,7 @@ mosip.iam.adapter.renewal-before-expiry-interval=1440
 #this should be false if you don?t use this restTemplate true if you do
 
 mosip.template-language=eng
-auth.server.admin.issuer.uri=https://rc2.technoforte.co.in/keycloak/auth/realms/
+auth.server.admin.issuer.uri=https://iam.demo05.idencode.link/auth/realms/
 mosip.iam.adapter.self-token-renewal-enable=true
 mosip.auth.filter_disable=false
 mosip.print.crypto.p12.filename=partner.p12
